http/style/main.css
/* ... */
.rounded4 {
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}

/*
 * Report
 */
.report-popup .report-message {
	width: calc(100% - 10px);
	max-width: calc(100% - 10px);
	margin-top: 6px;
	min-height: 70px;
}

/*
 * Leek characteristics colors
 */
.color-life {
	color: red;
}
.color-strength {
	color: #833100;
}
.color-wisdom {
	color: #5ebe00;
}
.color-agility {
	color: #0080F7;
}
.color-resistance {
	color: #fe7700;
}
.color-frequency {
	color: black;
}
.color-science {
	color: #0000a2;
}
.color-magic {
	color: #b800b6;
}
.color-tp {
	color: #FF7F01;
}
.color-mp {
	color: #00A900;
}

.scroll-x {
	overflow-x: auto;
}

